--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     </head>
     <title>Tearwell.gallery.</title>
 <body>
+        <!-- Add this inside <body>, before your main content -->
+    <div class="parallax-bg" id="bg1"></div>
+    <div class="parallax-bg" id="bg2"></div>
+    <div class="parallax-bg" id="bg3"></div>
+    <div class="parallax-bg" id="bg4"></div>
+    <div class="parallax-bg" id="bg5"></div>
+    <div class="parallax-bg" id="bg6"></div>
+    <div class="parallax-bg" id="bg7"></div>
+    <div class="parallax-bg" id="bg8"></div>
     <div class="header">
         <div class="name">
             <h2>Tearwell</h2>
@@ -19,7 +28,6 @@
             <h3>Hiii!! (｡•̀ᴗ-)✧ <br>
             I'm an artist who likes to draw fanarts! <br>
             Here are some of my works which I'm really proud of <br>
-            *Note! using my works devoid of my permission is prohibited</h3>
         </div>
         <div class="logo-container">
             <img src="logo1.png" alt="Logo" class="logo" height="50px" width="100%">
@@ -29,6 +37,9 @@
         </div>
     <div class="portfolio">
         <h2>Portfolio</h2>
+        <div class="copyright">
+        <h5>unouthorized use and reproduction in any case or form is prohibited</h5>
+        </div>
         <hr>
         <div class="label">
         <h4>Commissioned Arts</h4>
@@ -39,21 +50,20 @@
                 <td class="artwork-item scroll-hidden"><img src="art11.jpg" alt="Artwork 1"></td>
                 <td class="artwork-item scroll-hidden"><img src="art15.jpg" alt="Artwork 3"></td>
                 <td class="artwork-item scroll-hidden"><img src="art12.jpg" alt="Artwork 12"></td>
-
-            </tr>
-            <tr>
                 <td class="artwork-item scroll-hidden"><img src="art1.jpg" alt="Artwork 5"></td>
-                <td class="artwork-item scroll-hidden"><img src="art13.jpg" alt="Artwork 6"></td>
+                <td class="artwork-item scroll-hidden"><img src="new1.jpeg" alt="Artwork 6"></td>
                 <td class="artwork-item scroll-hidden"><img src="art9.jpg" alt="Artwork 4"></td>
-            </tr>
-            <tr>
                 <td class="artwork-item scroll-hidden"><img src="09.jpg" alt="Artwork 8"></td>
                 <td class="artwork-item scroll-hidden"><img src="art7.jpg" alt="Artwork 9"></td>
                 <td class="artwork-item scroll-hidden"><img src="art14.jpg" alt="Artwork 7"></td>
-            </tr>
-            <tr>
                 <td class="artwork-item scroll-hidden"><img src="art8.jpg" alt="Artwork 10"></td>
                 <td class="artwork-item scroll-hidden"><img src="art16.jpg" alt="Artwork 11"></td>
+                <td class="artwork-item scroll-hidden"><img src="art13.jpg" alt="Artwork 2"></td>
+                <td class="artwork-item scroll-hidden"><img src="new2.jpg" alt="Artwork 13"></td>
+                <td class="artwork-item scroll-hidden"><img src="new3.jpg" alt="Artwork 14"></td>
+                <td class="artwork-item scroll-hidden"><img src="new4.jpg" alt="Artwork 15"></td>
+                <td class="artwork-item scroll-hidden"><img src="new5.png" alt="Artwork 16"></td>
+                <td class="artwork-item scroll-hidden"><img src="new6.png" alt="Artwork 17"></td>
             </tr>
         </table>
         <hr>
