--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Averia+Sans+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Grandstander:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <title>Tearwell.gallery.</title>
+        <!-- Add before </body> in index.html -->
+    <div id="image-modal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="modal-img">
+    </div>
 <body>
         <!-- Add this inside <body>, before your main content -->
     <div class="parallax-bg" id="bg1"></div>
